fixed some tailwindcss overlap

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 :root{
-    height: 100%;
     margin:0;
     padding:0;
 }
